--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ body {
 .desktop-menu {
     position: absolute;
     background-color: var(--white);
-    top:49px;
+    top: 49px;
     right: 55px;
     width: 100px;
     height: auto;
@@ -108,34 +108,95 @@ body {
     border-radius: 6px;
     padding: 20px 20px 0 20px;
 }
-.desktop-menu ul{
+
+.desktop-menu ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
+
 .desktop-menu ul li {
     text-align: end;
 }
-.desktop-menu ul li a{
+
+.desktop-menu ul li a {
     text-decoration: none;
     color: var(--black);
     display: inline-block;
     margin-bottom: 20px;
     font-weight: bold;
 }
-.desktop-menu ul li:last-child{
+
+.desktop-menu ul li:last-child {
     padding-top: 20px;
     border-top: 1px solid var(--very-light-pink);
 }
-.desktop-menu ul li:last-child a{
+
+.desktop-menu ul li:last-child a {
     color: var(--hospital-green);
     font-size: var(--sm);
     font-weight: normal;
 }
 
+/*css navbar mobile-menu*/
+.mobile-menu {
+    position: absolute;
+    top: 49px;
+    left: 0;
+    width: 320px;
+    height: calc(100vh - 50px);
+    border: 1px solid var(--very-light-pink);
+    border-radius: 6px;
+    padding: 24px;
+    box-sizing: border-box;
+}
+
+.mobile-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 32px 0 0;
+}
+
+.mobile-menu ul li {
+    text-align: start;
+    margin-bottom: 32px;
+}
+
+.mobile-menu ul:last-child {
+    position: absolute;
+    bottom: 24px;
+}
+
+.mobile-menu ul:last-child li {
+    margin-bottom: 8px !important;
+}
+
+.mobile-menu ul:first-child li:last-child {
+    border-bottom: 1px solid var(--very-light-pink);
+    padding-bottom: 32px;
+}
+
+.mobile-menu ul li a {
+    text-decoration: none;
+    color: var(--black);
+    display: inline-block;
+    font-weight: bold;
+}
+
+.mobile-menu .email {
+    color: var(--dark);
+    font-weight: 300;
+    font-size: var(--sm);
+}
+
+.mobile-menu .sign-out {
+    color: var(--hospital-green);
+    font-weight: 500;
+    font-size: var(--sm);
+}
 
 /*General css*/
-.inactive{
+.inactive {
     display: none;
 }
 
@@ -149,6 +210,13 @@ body {
     .navbar-email,
     .navbar-left ul,
     .desktop-menu {
+        display: none;
+    }
+}
+
+
+@media (min-width: 641px) {
+    .mobile-menu {
         display: none;
     }
 }
