--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,9 @@
     border-bottom: 1px solid var(--very-light-pink);
     padding: 0 24px;
     box-sizing: border-box;
+    position: sticky;
+    top: 0px;
+    background-color: var(--white);
 }
 
 .navbar-left ul,
@@ -114,6 +117,7 @@
     border: 1px solid var(--very-light-pink);
     border-radius: 6px;
     padding: 20px 20px 0 20px;
+    z-index: 1;
 }
 
 .desktop-menu ul {
@@ -156,6 +160,8 @@
     border-radius: 6px;
     padding: 24px;
     box-sizing: border-box;
+    z-index: 1;
+    background-color: var(--white);
 }
 
 .mobile-menu ul {
@@ -215,6 +221,7 @@
     justify-content: space-between;
     height: calc(100vh - 50px);
     background-color: var(--white);
+    z-index: 1;
 }
 
 .order-content {
@@ -319,6 +326,64 @@ body {
     display: none;
 }
 
+/*Home css (all products)*/
+.main-container {
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 20px;
+    place-content: center;
+}
+
+.product-card {
+    width: 240px;
+}
+
+.product-card img {
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 16px;
+}
+
+.product-info div p:nth-child(1){
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0px;
+    margin-bottom: 4px;
+}
+
+.product-info div p:nth-child(2){
+    font-weight:lighter;
+    font-size: var(--sm);  
+    color: var(--very-light-pink);      
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.product-info figure {
+    margin: 0;
+}
+
+.product-info figure img {
+    width: 35px;
+    height: 35px;
+    margin: 0;
+}
+
 /*Responsive css*/
 @media (max-width: 640px) {
     .menu {
@@ -338,6 +403,21 @@ body {
 
     .order-container {
         width: 100%;
+    }
+
+    .cards-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 140px);
+        gap: 20px;
+    }
+
+    .product-card {
+        width: 140px;
+    }
+
+    .product-card img {
+        width: 140px;
+        height: 140px;
     }
 }
 
