--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@
     position: sticky;
     top: 0px;
     background-color: var(--white);
+    z-index: 2;
 }
 
 .navbar-left ul,
@@ -79,6 +80,7 @@
 
 .navbar-shopping-cart {
     position: relative;
+    cursor: pointer;
 }
 
 .navbar-shopping-cart div {
@@ -152,11 +154,10 @@
 /*css navbar mobile-menu*/
 .mobile-menu {
     position: absolute;
-    top: 49px;
+    top: 50px;
     left: 0;
     width: 320px;
     height: calc(100vh - 50px);
-    border: 1px solid var(--very-light-pink);
     border-radius: 6px;
     padding: 24px;
     box-sizing: border-box;
@@ -350,38 +351,126 @@ body {
     height: 240px;
     border-radius: 20px;
     object-fit: cover;
+    cursor: pointer;
 }
 
-.product-info {
+#cards-container .product-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 16px;
 }
 
-.product-info div p:nth-child(1){
+#cards-container .product-info div p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0px;
     margin-bottom: 4px;
 }
 
-.product-info div p:nth-child(2){
-    font-weight:lighter;
-    font-size: var(--sm);  
-    color: var(--very-light-pink);      
+#cards-container .product-info div p:nth-child(2) {
+    font-weight: lighter;
+    font-size: var(--sm);
+    color: var(--very-light-pink);
     margin-top: 0;
     margin-bottom: 0;
 }
 
-.product-info figure {
+#cards-container .product-info figure {
     margin: 0;
 }
 
-.product-info figure img {
+#cards-container .product-info figure img {
     width: 35px;
     height: 35px;
     margin: 0;
+}
+
+
+/*Product css*/
+
+.product-container-modal-box {
+    position: fixed;
+    left: 0;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    /* Use this properties if you want to disable background like a modal*/
+    background: black;
+    opacity: 0.5;
+}
+
+.product-container-box {
+    position: fixed;
+    left: 0;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.product-container {
+    width: 360px;
+    padding-bottom: 24px;
+    position: absolute;
+    right: 0;
+    top: 50px;
+    background-color: var(--white);
+    z-index: 1;
+}
+
+.product-container .close-container {
+    top: 12px;
+    left: 12px;
+    cursor: pointer;
+    position: absolute;
+    background-color: var(--white);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+
+.product-container .product-image {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+
+#product-container .product-info {
+    margin: 0 24px;
+}
+
+#product-container .product-info p:first-child {
+    font-weight: bold;
+    font-size: var(--md);
+    margin: 24px 0 0 0;
+    color: var(--black);
+}
+
+#product-container .product-info p:nth-child(2) {
+    font-weight: normal;
+    font-size: var(--md);
+    margin: 8px 0 24px 0;
+    color: var(--dark);
+}
+
+#product-container .product-info p:nth-child(3) {
+    font-weight: normal;
+    font-size: var(--sm);
+    margin: 12px 0 36px 0;
+    color: var(--dark);
+}
+
+.add-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /*Responsive css*/
@@ -401,8 +490,14 @@ body {
         margin-top: 24px;
     }
 
-    .order-container {
+    .product-container,
+    .order-container,
+    .mobile-menu {
         width: 100%;
+    }
+
+    .product-container {
+        height: 100vh;
     }
 
     .cards-container {
